--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <input type="hidden" name="_captcha" value="false" />
                 <button type=" submit ">
             send <i class="fas fa-paper-plane"></i>
-          </button> <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
+          </button> <input type="hidden" name="_next" value="https://ayoubbuoya.github.io/Personal-Portfolio/thanks.html">
             </form>
         </div>
     </section>
